--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,23 @@
 beautifulsoup4==4.12.2
 certifi==2023.5.7
 charset-normalizer==3.1.0
+colorama==0.4.6
 docopt==0.6.2
+exceptiongroup==1.1.2
+freezegun==1.2.2
 idna==3.4
+iniconfig==2.0.0
 mysql-connector-python==8.0.33
+packaging==23.1
 pipreqs==0.4.13
+pluggy==1.2.0
 protobuf==3.20.3
+pytest==7.4.0
+python-dateutil==2.8.2
 python-dotenv==1.0.0
 requests==2.31.0
+six==1.16.0
 soupsieve==2.4.1
+tomli==2.0.1
 urllib3==2.0.2
 yarg==0.1.9
